--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -193,6 +193,12 @@ h1 {
   filter: drop-shadow(0.14em 0.14em 0.22em var(--color-secondary)) drop-shadow(-0.14em -0.14em 0.22em var(--color-primary));
 }
 @media (min-width: 40rem) {
+  h1 {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
   h1::after {
     content: "";
     position: absolute;
@@ -215,6 +221,11 @@ h1 svg {
 }
 h1 span {
   display: inline-block;
+}
+@media (min-width: 40rem) {
+  h1 span {
+    display: inline;
+  }
 }
 
 h2 {
